<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_top_margin" >

    <TextView
        android:id="@+id/lbl_client_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:text="@string/title_client_info"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.CustomFont.Light"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="21sp" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:id="@+id/layout_client_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|start"
            android:orientation="@integer/list_item_orientation" >

            <TextView
                android:id="@+id/txt_account_number"
                android:layout_width="@dimen/col_width"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/account_number"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/account_number"
                android:gravity="center_vertical"
                android:text="@string/sample_account_number"
                android:textAppearance="@style/TextAppearance.CustomFont.Light"
                android:textColor="@color/background_material_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_left_margin"
                android:layout_marginStart="@dimen/list_item_left_margin"
                android:drawableLeft="@drawable/client"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/client"
                android:gravity="center_vertical"
                android:text="@string/sample_name"
                android:textColor="@color/background_material_dark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical|start"
            android:orientation="@integer/list_item_orientation" >

            <TextView
                android:id="@+id/txt_nus"
                android:layout_width="@dimen/col_width"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/nus"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/nus"
                android:gravity="center_vertical"
                android:text="@string/sample_nus"
                android:textColor="@color/background_material_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_meter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_left_margin"
                android:layout_marginStart="@dimen/list_item_left_margin"
                android:drawableLeft="@drawable/meter"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/meter"
                android:gravity="center_vertical"
                android:text="@string/sample_meter_number"
                android:textColor="@color/background_material_dark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical|start"
            android:orientation="@integer/list_item_orientation" >

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="@dimen/col_width"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/client_address"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/client_address"
                android:gravity="center_vertical"
                android:text="@string/sample_address"
                android:textColor="@color/background_material_dark"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_left_margin"
                android:layout_marginStart="@dimen/list_item_left_margin"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_category"
                    android:textColor="?attr/colorPrimaryDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/sample_category"
                    android:textColor="@color/background_material_dark"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:text="@string/title_reading"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.CustomFont.Light"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="21sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:background="?attr/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/layout_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|start"
                android:orientation="@integer/list_item_orientation" >

                <com.elfec.lecturas.gd.view.controls.ImprovedTextInputLayout
                    android:id="@+id/txt_input_layout_reading_date"
                    android:layout_width="@dimen/col_width"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/list_item_left_margin"
                        android:layout_marginStart="@dimen/list_item_left_margin"
                        android:drawableLeft="@drawable/calendar"
                        android:drawablePadding="5dp"
                        android:inputType="none"
                        android:textIsSelectable="true"
                        android:drawableStart="@drawable/calendar"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:hint="@string/lbl_current_date"
                        android:maxLength="10" />
                </com.elfec.lecturas.gd.view.controls.ImprovedTextInputLayout>

                <com.elfec.lecturas.gd.view.controls.ImprovedTextInputLayout
                    android:id="@+id/txt_input_layout_reading_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/list_item_left_margin"
                    android:layout_marginStart="@dimen/list_item_left_margin" >

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/list_item_left_margin"
                        android:layout_marginStart="@dimen/list_item_left_margin"
                        android:drawableLeft="@drawable/clock"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/clock"
                        android:inputType="none"
                        android:textIsSelectable="true"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:hint="@string/lbl_current_time"
                        android:maxLength="10" />
                </com.elfec.lecturas.gd.view.controls.ImprovedTextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>