<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/nav_drawer_horizontal_padding"
    android:paddingRight="@dimen/nav_drawer_horizontal_padding"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_reading_status"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/sample_reading_status"
        android:textAppearance="@style/TextAppearance.CustomFont.Light"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_account_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/account_number"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/account_number"
            android:gravity="center_vertical"
            android:text="@string/sample_account_number"
            android:textAppearance="@style/TextAppearance.CustomFont.Light"
            android:textColor="@color/background_material_dark"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical|start"
            android:orientation="@integer/list_item_orientation" >

            <TextView
                android:id="@+id/txt_nus"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/nus"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/nus"
                android:gravity="center_vertical"
                android:text="@string/sample_nus"
                android:textColor="@color/background_material_dark"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txt_meter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_left_margin"
                android:layout_marginStart="@dimen/list_item_left_margin"
                android:drawableLeft="@drawable/meter"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/meter"
                android:gravity="center_vertical"
                android:text="@string/sample_meter_number"
                android:textColor="@color/background_material_dark"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_client_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/client"
	        android:drawableStart="@drawable/client"
            android:gravity="center_vertical"
            android:text="@string/sample_name"
            android:drawablePadding="5dp"
            android:textColor="@color/background_material_dark"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/static_separator"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_alignParentBottom="true"
        android:background="@color/border_soft_gray" />

</RelativeLayout>